--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -151,19 +151,19 @@
                 
                 sc.scale.set(10.0, 10.0, 10.0);
 
-                for ( var i = 0; i < sides1.length; i ++ ) {
+                // for ( var i = 0; i < sides1.length; i ++ ) {
 
-                    var side = sides1[ i ];
+                //     var side = sides1[ i ];
 
-                    var element = document.createElement( 'img' );
-                    element.width = 1026; // 2 pixels extra to close the gap.
-                    element.src = side.url;  //this loads the image
+                //     var element = document.createElement( 'img' );
+                //     element.width = 1026; // 2 pixels extra to close the gap.
+                //     element.src = side.url;  //this loads the image
 
-                    object1 = new THREE.CSS3DObject( element );
-                    object1.position = side.position;
-                    object1.rotation.copy(side.rotation);
-                    sc.add(object1);
-                }
+                //     object1 = new THREE.CSS3DObject( element );
+                //     object1.position = side.position;
+                //     object1.rotation.copy(side.rotation);
+                //     sc.add(object1);
+                // }
 
 
                 var divXpos = document.createElement('div');
