--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -45,6 +45,8 @@
   
         <script src="http://argon.gatech.edu/argon.js"></script>
         <script>
+            alert("start 1.0")
+
             var touchX;
             var touchY;
             var phi = 0;
@@ -115,7 +117,7 @@
                 var side;
                 var object1;
  
-                
+                alert("argon in");
                 var sides1 = [
                     {
                         url: 'centen.0000.png',
