--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -45,7 +45,7 @@
   
         <script src="http://argon.gatech.edu/argon.js"></script>
         <script>
-            alert("start 1.3")
+            alert("start 1.4")
 
             var touchX;
             var touchY;
@@ -120,13 +120,17 @@
                 alert("argon in");
 
                 setInterval(function(){
-                    alert("3000ms");
+                    alert("5000ms");
                     // begin with the local forward direction of the camera
                     var direction = new THREE.Vector3( 0, 0, -1 );
                     // transform the direction into world space
                     direction.applyMatrix4( ARGON.camera.matrixWorld );
+                    alert("still working");
+                    alert(ARGON.camera.matrixWorld);
+                    alert("step one");
                     alert(direction.x + " " + direction.y + " " + direction.z);
-                }, 3000);
+                    alert("nice!!")
+                }, 5000);
 
                 var sides1 = [
                     {
