--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -44,8 +44,11 @@
    <body>
   
         <script src="http://argon.gatech.edu/argon.js"></script>
+        <script src="three61.min.js"></script>
+        <script src="CSS3D61Renderer.js"></script>
+
         <script>
-            alert("start 1.4")
+            alert("start 1.5")
 
             var touchX;
             var touchY;
