--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -48,7 +48,7 @@
         <script src="CSS3D61Renderer.js"></script>
 
         <script>
-            alert("start 1.6")
+            alert("start 1.8");
 
             var touchX;
             var touchY;
