--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -46,7 +46,7 @@
         <script src="http://argon.gatech.edu/argon.js"></script>
 
         <script>
-            alert("start 1.08");
+            alert("start 1.09");
 
             var touchX;
             var touchY;
@@ -127,6 +127,13 @@
                     // transform the direction into world space
                     alert("at least here!");
                     alert(direction.x + " " + direction.y + " " + direction.z);
+
+                    alert(ARGON);
+                    alert(ARGON.camera);
+                    alert(ARGON.camera.matrixWorld);
+                    alert(ARGON.camera.matrixWorld());
+
+
                     direction.applyMatrix4( ARGON.camera.matrixWorld );
                     alert("still working");
                     alert(ARGON.camera.matrixWorld);
