--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -135,7 +135,7 @@
 
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
                     alert("still working");
-                    alert(ARGON.camera.matrixWorld);
+                    alert(ARGON.threeCamera.matrixWorld);
                     alert("step one");
                     alert(direction.x + " " + direction.y + " " + direction.z);
                     alert("nice!!")
