--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -46,7 +46,7 @@
         <script src="http://argon.gatech.edu/argon.js"></script>
 
         <script>
-            alert("start 1.12");
+            alert("start 1.13");
 
             var touchX;
             var touchY;
@@ -64,6 +64,7 @@
             function onDocumentTouchStart( event ) {
 
                 event.preventDefault();
+                alert("touch");
                 var touch = event.touches[ 0 ];
 
                 touchX = touch.screenX;
@@ -73,6 +74,7 @@
             function onDocumentTouchMove( event ) {
 
                 event.preventDefault();
+                alert("touch move");
 
                 var touch = event.touches[ 0 ];
 
@@ -91,6 +93,7 @@
                     icount += 1;
                     // check for position if threshold surpassed
                     if (changed) {
+                        alert("what's changed?");
                         phi = THREE.Math.degToRad( 90 - lat );
                         theta = THREE.Math.degToRad( lon );
                         
