--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -49,6 +49,7 @@
 
             function calDistance(startLat, startLon, desLat, desLon) {
                 var R = 6371; // km
+                alert("step1")
                 var dLat = (desLat-startLat).toRad();
                 var dLon = (desLon-startLon).toRad(); 
                 alert("cal-ing");
@@ -62,7 +63,7 @@
                 return value2;
             }
 
-            alert("start 1.21");
+            alert("start 1.22");
 
             var desLat = 33.755544;
             var desLon = -84.374529;
@@ -152,8 +153,8 @@
                     var lat = lla.latitude;
                     var lon = lla.longitude;
                     // alert(lat + " " + lon);
-                    alert(calDistance);
-                    alert("distance: " + calDistance(lat, lon, desLat, desLon));
+                    var relDistance = calDistance(lat, lon, desLat, desLon);
+                    alert("distance: " + relDistance);
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
                     alert(direction.x + " " + direction.y + " " + direction.z);
                 }, 5000);
