--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -47,12 +47,13 @@
 
         <script>
 
-            Number.prototype.toRad = function () { return this * Math.PI / 180; }
+            Number.prototype.toRad = function () { return this * Math.PI / 180; };
             function calDistance(startLat, startLon, desLat, desLon) {
                 var R = 6371; // km
                 alert(esLat-startLat)
                 var dLat = (desLat-startLat).toRad();
                 var dLon = (desLon-startLon).toRad(); 
+                alert("toRad()");
                 var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
                         Math.cos(startLat.toRad()) * Math.cos(desLat.toRad()) * 
                         Math.sin(dLon/2) * Math.sin(dLon/2); 
@@ -62,7 +63,7 @@
                 return value2;
             }
 
-            alert("start 1.24");
+            alert("start 1.25");
 
             var desLat = 33.755544;
             var desLon = -84.374529;
@@ -143,7 +144,7 @@
                 alert("argon in");
 
                 setInterval(function(){
-                    alert("800ms");
+                    alert("1000ms");
                     // begin with the local forward direction of the camera
                     var direction = new THREE.Vector3( 0, 0, -1 );
                     // transform the direction into world space
@@ -156,7 +157,7 @@
                     alert("distance: " + relDistance);
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
                     alert(direction.x + " " + direction.y + " " + direction.z);
-                }, 5000);
+                }, 1000);
                 
                 sc.scale.set(10.0, 10.0, 10.0);
 
