--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -63,7 +63,7 @@
                 return value2;
             }
 
-            alert("start 1.26");
+            alert("start 1.27");
 
             var desLat = 33.755544;
             var desLon = -84.374529;
@@ -153,6 +153,7 @@
                     var lat = lla.latitude;
                     var lon = lla.longitude;
                     alert(lat + " " + lon);
+                    alert(desLat + " " + desLon);
                     var relDistance = calDistance(lat, lon, desLat, desLon);
                     alert("distance: " + relDistance);
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
