--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -48,12 +48,9 @@
         <script>
 
             function calDistance(startLat, startLon, desLat, desLon) {
-                alert("in");
                 var R = 6371; // km
-                alert(esLat-startLat)
                 var dLat = (desLat-startLat).toRad();
                 var dLon = (desLon-startLon).toRad(); 
-                alert("toRad()");
                 var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
                         Math.cos(startLat.toRad()) * Math.cos(desLat.toRad()) * 
                         Math.sin(dLon/2) * Math.sin(dLon/2); 
@@ -62,9 +59,9 @@
                 var value2 = d * 3280.8399;
                 return value2;
             }
-            Number.prototype.toRad = function () { alert("why"); return this * Math.PI / 180; };
+            Number.prototype.toRad = function () { return this * Math.PI / 180; };
 
-            alert("start 1.28");
+            alert("start 1.29");
 
             var desLat = 33.755544;
             var desLon = -84.374529;
