--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -64,8 +64,7 @@
                 var dLat = (desLat-startLat).toRad();
                 var dLon = (desLon-startLon).toRad();  
                 var y = Math.sin(dLon) * Math.cos(desLat);
-                var x = Math.cos(startLat)*Math.sin(desLat) -
-                        Math.sin(startLat)*Math.cos(desLat)*Math.cos(dLon);
+                var x = Math.cos(startLat)*Math.sin(desLat) - Math.sin(startLat)*Math.cos(desLat)*Math.cos(dLon);
                 var brng = Math.atan2(y, x).toBrng();
             }
 
@@ -73,8 +72,11 @@
             Number.prototype.toBrng = function() {  // convert radians to degrees (as bearing: 0...360)
               return (this.toDeg()+360) % 360;
             };
+            Number.prototype.toDeg = function() {  // convert radians to degrees (signed)
+              return this * 180 / Math.PI;
+            };
 
-            alert("start 1.30");
+            alert("start 1.31");
 
             var desLat = 33.755544;
             var desLon = -84.374529;
@@ -166,7 +168,7 @@
                     // alert(lat + " " + lon);
                     // alert(desLat + " " + desLon);
                     var relDistance = calDistance(lat, lon, desLat, desLon);
-                    alert("distance: " + relDistance);
+                    alert("distance: " + relDistance + " km");
                     var relBearing = calBearing(lat, lon, desLat, desLon);
                     alert("bearing: " + relBearing);
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
