--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.34");
+            alert("start 1.4");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -273,11 +273,11 @@
                     // alert(lat + " " + lon);
                     // alert(desLat + " " + desLon);
                     var relDistance = calDistance(lat, lon, desLat, desLon);
-                    alert("distance: " + relDistance + " km");
+                    // alert("distance: " + relDistance + " km");
                     var relBearing = calBearing(lat, lon, desLat, desLon);
-                    alert("bearing: " + relBearing);
+                    // alert("bearing: " + relBearing);
                     direction.applyMatrix4( ARGON.threeCamera.matrixWorld );
-                    alert("camera direction: " + direction.x + " " + direction.y + " " + direction.z);
+                    // alert("camera direction: " + direction.x + " " + direction.y + " " + direction.z);
 
                     // relBearing
                     // 0 - 90 [0~-1, 0, 1~0]
@@ -301,13 +301,27 @@
                     } else {
                         alert("bearing error!");
                     }
-                    alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
+                    // alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
 
                     divDirectionMarker.style.innerText = '' + relDistance + 'km';
 
 
-                    cssDirectionMarker.position.x = target.x;
-                    cssDirectionMarker.position.z = target.z;
+                    cssDirectionMarker.position.x = target.x * 200;
+                    cssDirectionMarker.position.z = target.z * 200;
+
+                    var rotateUnit = (Math.PI / 2) / 1;
+                    var yRotation = 0;
+                    if (target.x >=0 && target.z >=0) {
+                        yRotation = - Math.PI / 2 - target.z * rotateUnit
+                    } else if (target.x <= 0 && target.z <= 0) {
+                        yRotation = (- target.x) * rotateUnit;
+                    } else if (target.x >= 0 && target.z <= 0) {
+                        yRotation = - target.x * rotateUnit;
+                    } else if (target.x <= 0 && target.z >= 0) {
+                        yRotation = Math.PI / 2 + target.z * rotateUnit;
+                    }
+
+                    cssDirectionMarker.rotation.y = yRotation;
                     // cssDirectionMarker.rotation.y = 0
 
                 }, 3000);
@@ -372,6 +386,7 @@
                 ARGON.World.add(cssObjectYneg);
                 ARGON.World.add(cssObjectZpos);
                 ARGON.World.add(cssObjectZneg);
+                ARGON.World.add(cssDirectionMarker);
 
                 ARGON.threeCamera.fov = 75;
                 ARGON.onRender = app.onRender; 
