--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.4");
+            alert("start 1.41");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -303,7 +303,9 @@
                     }
                     // alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
 
-                    divDirectionMarker.style.innerText = '' + relDistance + 'km';
+                    // divDirectionMarker.style.innerText = '' + relDistance + 'km';
+                    document.getElementById("directionMarker").innerHTML ='' + relDistance + 'km';
+                    
 
 
                     cssDirectionMarker.position.x = target.x * 200;
