--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.42");
+            alert("start 1.43");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -307,6 +307,8 @@
                     // alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
 
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
+                    alert(relDistance.toPrecision(3));
+                    alert(relDistance.toPrecision(3).toString());
                     document.getElementById("directionMarker").innerHTML ='' + relDistance.toPrecision(3) + 'km';
                     
 
