--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.45");
+            alert("start 1.46");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -239,6 +239,7 @@
                 divDirectionMarker.style.position = 'absolute';
                 divDirectionMarker.style.fontSize = '15px';
                 divDirectionMarker.style.fontFamily = 'helvetica';
+                divDirectionMarker.style.color = 'black';
                 divDirectionMarker.style.WebkitTransform = "scale3d(-1, 1, 1)";
                 // divDirectionMarker.style.innerText = 'distance';
                 
