--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.46");
+            alert("start 1.47");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -234,7 +234,7 @@
 
                 divDirectionMarker.id = "directionMarker";
                 divDirectionMarker.style.width = "50px";
-                divDirectionMarker.style.height = "30px";
+                divDirectionMarker.style.height = "20px";
                 divDirectionMarker.style.backgroundColor = "white";
                 divDirectionMarker.style.position = 'absolute';
                 divDirectionMarker.style.fontSize = '15px';
@@ -310,7 +310,7 @@
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
                     // alert(relDistance.toPrecision(3));
                     var disText = relDistance.toPrecision(3).toString()
-                    document.getElementById("directionMarker").innerHTML = relDistance + 'km';
+                    document.getElementById("directionMarker").innerHTML = relDistance.toPrecision(3) + 'km';
                     
                     // directionMarker.innerText = disText + 'km';
 
