--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -266,7 +266,7 @@
 
 
                 setInterval(function(){
-                    alert("3000ms");
+                    // alert("3000ms");
                     // begin with the local forward direction of the camera
                     var direction = new THREE.Vector3( 0, 0, -1 );
                     // transform the direction into world space
