--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,13 +77,13 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.47");
+            alert("start 1.48");
 
-            var desLat = 33.755544;
-            var desLon = -84.374529; // somewhere on Auburn Ave.
+            // var desLat = 33.755544;
+            // var desLon = -84.374529; // somewhere on Auburn Ave.
 
-            // var desLat = 51.555197; 
-            // var desLon = -0.108377; // Emirate Stadium in London, UK
+            var desLat = 51.555197; 
+            var desLon = -0.108377; // Emirate Stadium in London, UK
 
             var touchX;
             var touchY;
@@ -233,8 +233,8 @@
                 divZneg.innerText = "SOUTH";
 
                 divDirectionMarker.id = "directionMarker";
-                divDirectionMarker.style.width = "50px";
-                divDirectionMarker.style.height = "20px";
+                divDirectionMarker.style.width = "0px";
+                divDirectionMarker.style.height = "0px";
                 divDirectionMarker.style.backgroundColor = "white";
                 divDirectionMarker.style.position = 'absolute';
                 divDirectionMarker.style.fontSize = '15px';
@@ -309,6 +309,9 @@
 
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
                     // alert(relDistance.toPrecision(3));
+
+                    divDirectionMarker.style.width = "50px";
+                    divDirectionMarker.style.height = "20px";
                     var disText = relDistance.toPrecision(3).toString()
                     document.getElementById("directionMarker").innerHTML = relDistance.toPrecision(3) + 'km';
                     
