--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.48");
+            alert("start 1.49");
 
             // var desLat = 33.755544;
             // var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -233,8 +233,8 @@
                 divZneg.innerText = "SOUTH";
 
                 divDirectionMarker.id = "directionMarker";
-                divDirectionMarker.style.width = "0px";
-                divDirectionMarker.style.height = "0px";
+                divDirectionMarker.style.width = "50px";
+                divDirectionMarker.style.height = "20px";
                 divDirectionMarker.style.backgroundColor = "white";
                 divDirectionMarker.style.position = 'absolute';
                 divDirectionMarker.style.fontSize = '15px';
@@ -310,8 +310,8 @@
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
                     // alert(relDistance.toPrecision(3));
 
-                    divDirectionMarker.style.width = "50px";
-                    divDirectionMarker.style.height = "20px";
+                    // divDirectionMarker.style.width = "50px";
+                    // divDirectionMarker.style.height = "20px";
                     var disText = relDistance.toPrecision(3).toString()
                     document.getElementById("directionMarker").innerHTML = relDistance.toPrecision(3) + 'km';
                     
