--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -77,7 +77,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.49");
+            alert("start 1.50");
 
             // var desLat = 33.755544;
             // var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -289,6 +289,8 @@
                     // 180 - 270 [0~1, 0, -1~0]
                     // 270 - 360 [1~0, 0, 0~1]
 
+                    alert(relBearing);
+
                     var unit = 1.0 / 90;
                     if (relBearing >=0 && relBearing <= 90) {
                         target.x = 0 - unit * relBearing;
@@ -305,7 +307,7 @@
                     } else {
                         alert("bearing error!");
                     }
-                    // alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
+                    alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
 
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
                     // alert(relDistance.toPrecision(3));
