--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -60,13 +60,14 @@
                 return d;
             }
 
-            function calBearing(startLat, startLon, desLat, desLon) {
-                var dLat = (desLat-startLat).toRad();
-                var dLon = (desLon-startLon).toRad();  
-                var y = Math.sin(dLon) * Math.cos(desLat);
-                var x = Math.cos(startLat)*Math.sin(desLat) - Math.sin(startLat)*Math.cos(desLat)*Math.cos(dLon);
-                var brng = Math.atan2(y, x).toBrng();
-                return brng;
+            function calBearing(lat1, lon1, lat2, lon2) {
+              lat1 = lat1.toRad(); lat2 = lat2.toRad();
+              var dLon = (lon2-lon1).toRad();
+
+              var y = Math.sin(dLon) * Math.cos(lat2);
+              var x = Math.cos(lat1)*Math.sin(lat2) -
+                      Math.sin(lat1)*Math.cos(lat2)*Math.cos(dLon);
+              return Math.atan2(y, x).toBrng();
             }
 
             Number.prototype.toRad = function () { return this * Math.PI / 180; };
@@ -77,7 +78,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.50");
+            alert("start 1.51");
 
             // var desLat = 33.755544;
             // var desLon = -84.374529; // somewhere on Auburn Ave.
