--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -78,13 +78,13 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.51");
+            alert("start 1.52");
 
-            // var desLat = 33.755544;
-            // var desLon = -84.374529; // somewhere on Auburn Ave.
+            var desLat = 33.755544;
+            var desLon = -84.374529; // somewhere on Auburn Ave.
 
-            var desLat = 51.555197; 
-            var desLon = -0.108377; // Emirate Stadium in London, UK
+            // var desLat = 51.555197; 
+            // var desLon = -0.108377; // Emirate Stadium in London, UK
 
             var touchX;
             var touchY;
@@ -290,7 +290,7 @@
                     // 180 - 270 [0~1, 0, -1~0]
                     // 270 - 360 [1~0, 0, 0~1]
 
-                    alert(relBearing);
+                    // alert(relBearing);
 
                     var unit = 1.0 / 90;
                     if (relBearing >=0 && relBearing <= 90) {
@@ -308,7 +308,7 @@
                     } else {
                         alert("bearing error!");
                     }
-                    alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
+                    // alert("reletive direction vector: [" + target.x + ", " + target.y + ", " + target.z + "]");
 
                     // divDirectionMarker.style.innerText = '' + relDistance + 'km';
                     // alert(relDistance.toPrecision(3));
