--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -78,7 +78,7 @@
               return this * 180 / Math.PI;
             };
 
-            alert("start 1.52");
+            alert("start 1.53");
 
             var desLat = 33.755544;
             var desLon = -84.374529; // somewhere on Auburn Ave.
@@ -241,6 +241,7 @@
                 divDirectionMarker.style.fontSize = '15px';
                 divDirectionMarker.style.fontFamily = 'helvetica';
                 divDirectionMarker.style.color = 'black';
+                divDirectionMarker.style.opacity = 0;
                 divDirectionMarker.style.WebkitTransform = "scale3d(-1, 1, 1)";
                 // divDirectionMarker.style.innerText = 'distance';
                 
@@ -317,6 +318,7 @@
                     // divDirectionMarker.style.height = "20px";
                     var disText = relDistance.toPrecision(3).toString()
                     document.getElementById("directionMarker").innerHTML = relDistance.toPrecision(3) + 'km';
+                    document.getElementById("directionMarker").style.opacity = 0.6;
                     
                     // directionMarker.innerText = disText + 'km';
 
