--- a/centen/testMarker2.html
+++ b/centen/testMarker2.html
@@ -80,11 +80,11 @@
 
             alert("start 1.53");
 
-            var desLat = 33.755544;
-            var desLon = -84.374529; // somewhere on Auburn Ave.
+            // var desLat = 33.755544;
+            // var desLon = -84.374529; // somewhere on Auburn Ave.
 
-            // var desLat = 51.555197; 
-            // var desLon = -0.108377; // Emirate Stadium in London, UK
+            var desLat = 51.555197; 
+            var desLon = -0.108377; // Emirate Stadium in London, UK
 
             var touchX;
             var touchY;
