--- a/centen/testMarker3.html
+++ b/centen/testMarker3.html
@@ -83,8 +83,11 @@
             // var desLat = 33.755544;
             // var desLon = -84.374529; // somewhere on Auburn Ave.
 
-            var desLat = 51.555197; 
-            var desLon = -0.108377; // Emirate Stadium in London, UK
+            // var desLat = 51.555197; 
+            // var desLon = -0.108377; // Emirate Stadium in London, UK
+
+            var desLat = 33.780818;
+            var desLon = -84.386438; // Midtown Marta Station
 
             var touchX;
             var touchY;
