--- a/centen/testMarker.html
+++ b/centen/testMarker.html
@@ -13,33 +13,7 @@
        <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
        <meta name="arenabled" />
             
-       <style>
-            body {
-                background-color: #FFFFFF;
-                margin: 0;
-                cursor: move;
-                overflow: hidden;
-            }
-
-            a {
-                color: #ffffff;
-            }
-
-            #cssContent {
-                opacity: 0.4;
-                border-radius: 3px;
-            }
-
-            #cssPlace {
-                opacity: 0.5;
-                /*background-color: #000000;*/
-                font-size: 10;
-                color: #ffffff;
-                width: 180;
-                height: 10;
-                position: absolute;
-            }
-        </style>
+       <link rel="stylesheet" href="ar.css" />
    </head>
    <body>
   
