--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -438,7 +438,7 @@
 			 var alpha = event.alpha;
 			 var beta = event.beta;
 			 var gamma = event.gamma;
-			 alert('Orientation - Alpha: '+alpha+', Beta: '+beta+', Gamma: '+gamma);
+			 // alert('Orientation - Alpha: '+alpha+', Beta: '+beta+', Gamma: '+gamma);
 			}
 
 			function animate() {
