--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -72,7 +72,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.03');
+				alert('0.04');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -462,7 +462,7 @@
 				target.y = Math.cos( phi );
 				target.z = Math.sin( phi ) * Math.sin( theta );
 
-				alert("lookAt: " + target.x + " " + target.y + " " + target.z);
+				// alert("lookAt: " + target.x + " " + target.y + " " + target.z);
 
 				camera.lookAt( target );
 				// camera.lookAt(new THREE.Vector3(1, 0, 1));
