--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -72,7 +72,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.11');
+				alert('0.12');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -454,7 +454,7 @@
 				// theta = THREE.Math.degToRad( lon );
 				
 				phi = - THREE.Math.degToRad( gamma );
-				theta = - THREE.Math.degToRad( alpha - 180 );
+				theta = - THREE.Math.degToRad( alpha );
 
 				// phi = beta;
 				// theta = gamma;
