--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -72,7 +72,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.12');
+				alert('0.13');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -453,7 +453,7 @@
 				// phi = THREE.Math.degToRad( 90 - lat );
 				// theta = THREE.Math.degToRad( lon );
 				
-				phi = - THREE.Math.degToRad( gamma );
+				phi = - THREE.Math.degToRad( - gamma );
 				theta = - THREE.Math.degToRad( alpha );
 
 				// phi = beta;
