--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -72,7 +72,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.16');
+				alert('0.17');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -454,7 +454,7 @@
 				// theta = THREE.Math.degToRad( lon );
 				
 				phi = THREE.Math.degToRad( 180 - gamma );
-				theta = - THREE.Math.degToRad( alpha );
+				theta = - THREE.Math.degToRad( alpha + 180 );
 
 				// phi = beta;
 				// theta = gamma;
