--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -478,8 +478,8 @@
 					phi = THREE.Math.degToRad( 180 - gamma );
 					theta = - THREE.Math.degToRad( alpha + 180 );
 				} else {
-					phi = THREE.Math.degToRad( 180 - beta );
-					theta = - THREE.Math.degToRad( gamma + 180 );
+					phi = THREE.Math.degToRad( 90 - lat );
+					theta = THREE.Math.degToRad( lon );
 				}
 
 				// phi = beta;
