--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -91,7 +91,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.26');
+				alert('0.27');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -475,7 +475,13 @@
 				// theta = THREE.Math.degToRad( lon );
 				
 				if (isLandScape == 1) {
-					phi = THREE.Math.degToRad( 180 + Math.abs(gamma) );
+					var gamma_k = 0;
+					if (gamma < 0) {
+						gamma_k = -gamma;
+					} else {
+						gamma_k = 180 - gamma;
+					}
+					phi = THREE.Math.degToRad( 180 + gamma_k );
 					theta = - THREE.Math.degToRad( alpha + 180 );
 				} else {
 					phi = THREE.Math.degToRad( 90 - lat );
