--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -91,7 +91,7 @@
 						
 			// initiatlize: two sets of pano images
 			function init() {
-				alert('0.28');
+				alert('0.29');
 				if (window.DeviceOrientationEvent) {
 				  // your code
 				  window.addEventListener('deviceorientation', capture_orientation, false);
@@ -475,13 +475,8 @@
 				// theta = THREE.Math.degToRad( lon );
 				
 				if (isLandScape == 1) {
-					var gamma_k = 0;
-					if (gamma < 0) {
-						gamma_k = -gamma;
-					} else {
-						gamma_k = -gamma;
-					}
-					phi = THREE.Math.degToRad( 180 + gamma_k );
+
+					phi = THREE.Math.degToRad( 180 - gamma );
 					theta = - THREE.Math.degToRad( alpha + 180 );
 				} else {
 					phi = THREE.Math.degToRad( 90 - lat );
