--- a/centen/centen3.html
+++ b/centen/centen3.html
@@ -481,6 +481,8 @@
 				} else {
 					phi = THREE.Math.degToRad( 90 - lat );
 					theta = THREE.Math.degToRad( lon );
+					// phi = THREE.Math.degToRad( 180 + beta );
+					// theta = - THREE.Math.degToRad( alpha + 180 );
 				}
 
 				// phi = beta;
