--- a/centen/pano.html
+++ b/centen/pano.html
@@ -121,12 +121,12 @@
                 {
                     url: 'resources/images/aYMCA_old_timey1.0004.png',
                     position: new THREE.Vector3( 0,  -512, 0 ),
-                    rotation: new THREE.Euler( -Math.PI / 2, 0, Math.PI / 2 )
+                    rotation: new THREE.Euler( -Math.PI / 2, 0, 3 * Math.PI / 2 )
                 },
                 {
                     url: 'resources/images/aYMCA_old_timey1.0005.png',
                     position: new THREE.Vector3( 0, 512, 0 ),
-                    rotation: new THREE.Euler( Math.PI / 2, 0, Math.PI / 2 )
+                    rotation: new THREE.Euler( Math.PI / 2, 0, 3 * Math.PI / 2 )
                 },
                 {
                     url: 'resources/images/aYMCA_old_timey1.0003.png',
